// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack.config.js adds devServer config when passing the --dev-server flag 1`] = `
{
  "devServer": {
    "compress": true,
    "port": 3000,
  },
  "devtool": "source-map",
  "entry": [Function],
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": [Function],
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": false,
                    "wordpress": true,
                  },
                ],
                [
                  "@linaria",
                  {
                    "babelOptions": {
                      "babelrc": false,
                      "configFile": false,
                      "presets": [
                        [
                          "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                          {
                            "targets": [
                              "> 1%",
                              "Firefox ESR",
                              "last 2 versions",
                              "not ie <= 11",
                              "not ie_mob <=11",
                            ],
                            "useBuiltIns": false,
                            "wordpress": true,
                          },
                        ],
                      ],
                      "sourceType": "unambiguous",
                    },
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
          {
            "loader": "@linaria/webpack-loader",
            "options": {
              "babelOptions": {
                "babelrc": false,
                "configFile": false,
                "plugins": [],
                "presets": [
                  [
                    "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                    {
                      "targets": [
                        "> 1%",
                        "Firefox ESR",
                        "last 2 versions",
                        "not ie <= 11",
                        "not ie_mob <=11",
                      ],
                      "useBuiltIns": false,
                      "wordpress": true,
                    },
                  ],
                  [
                    "@linaria",
                    {
                      "babelOptions": {
                        "babelrc": false,
                        "configFile": false,
                        "presets": [
                          [
                            "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                            {
                              "targets": [
                                "> 1%",
                                "Firefox ESR",
                                "last 2 versions",
                                "not ie <= 11",
                                "not ie_mob <=11",
                              ],
                              "useBuiltIns": false,
                              "wordpress": true,
                            },
                          ],
                        ],
                        "sourceType": "unambiguous",
                      },
                    },
                  ],
                ],
                "sourceType": "unambiguous",
              },
              "extension": ".linaria.module.css",
              "overrideContext": [Function],
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.linaria\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "css-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "parse": {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.\\(jpe\\?g\\|png\\|webp\\|avif\\)\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.svg\\$/,
        },
      },
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "template": "public/index.html",
      },
      "version": 5,
    },
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "emitError": true,
        "emitWarning": true,
        "extensions": "js",
        "failOnError": false,
        "fix": false,
        "lintDirtyModulesOnly": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[id].css",
        "experimentalUseImportModule": undefined,
        "filename": [Function],
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    StylelintWebpackPlugin {
      "key": "StylelintWebpackPlugin",
      "options": {
        "allowEmptyInput": true,
        "cache": true,
        "cacheLocation": "node_modules/.cache/stylelint-webpack-plugin/.stylelintcache",
        "configFile": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/stylelint.config.js",
        "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "css",
          "scss",
          "sass",
        ],
        "failOnError": false,
        "files": "**/*.(s(c|a)ss|css)",
        "lintDirtyModulesOnly": true,
      },
      "prevTimestamps": Map {},
      "run": [Function],
      "startTime": 1701701914731,
    },
    WebpackBarPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "options": {
        "color": "green",
        "name": "webpack",
        "reporter": null,
        "reporters": [
          "basic",
        ],
      },
      "percentBy": undefined,
      "profile": false,
      "reporters": [
        SimpleReporter {},
      ],
      "showActiveModules": true,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    CleanExtractedDeps {
      "options": undefined,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "verbose": false,
      },
      "outputPath": "",
      "trash": [],
      "verbose": false,
    },
    TenUpToolkitTscPlugin {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js allows changing browsersync port 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": [Function],
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "jquery": "jQuery",
    "lodash": "lodash",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": [Function],
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/babel-loader/lib/index.js",
            "options": {
              "cacheDirectory": true,
            },
          },
          {
            "loader": "@linaria/webpack-loader",
            "options": {
              "babelOptions": {},
              "extension": ".linaria.module.css",
              "overrideContext": [Function],
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.linaria\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "css-loader",
          },
        ],
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "parse": {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.\\(jpe\\?g\\|png\\|webp\\|avif\\)\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.svg\\$/,
        },
      },
    ],
    "runtimeChunk": false,
  },
  "output": {
    "chunkFilename": "js/[name].[contenthash].chunk.js",
    "clean": true,
    "filename": [Function],
    "path": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "emitError": true,
        "emitWarning": true,
        "extensions": "js",
        "failOnError": false,
        "fix": false,
        "lintDirtyModulesOnly": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[id].css",
        "experimentalUseImportModule": undefined,
        "filename": [Function],
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    CopyPlugin {
      "options": {},
      "patterns": [
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
          "from": "**/*.{jpg,jpeg,png,gif,webp,avif,ico,svg,eot,ttf,woff,woff2,otf}",
          "noErrorOnMissing": true,
          "to": "[path][name][ext]",
        },
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks",
          "from": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks/**/block.json",
          "noErrorOnMissing": true,
          "to": "blocks/[path][name][ext]",
          "transform": [Function],
        },
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks",
          "from": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks/**/*.php",
          "noErrorOnMissing": true,
          "to": "blocks/[path][name][ext]",
        },
      ],
    },
    NoBrowserSyncPlugin {
      "displayed": false,
    },
    StylelintWebpackPlugin {
      "key": "StylelintWebpackPlugin",
      "options": {
        "allowEmptyInput": true,
        "cache": true,
        "cacheLocation": "node_modules/.cache/stylelint-webpack-plugin/.stylelintcache",
        "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "css",
          "scss",
          "sass",
        ],
        "failOnError": false,
        "files": "**/*.(s(c|a)ss|css)",
        "lintDirtyModulesOnly": true,
      },
      "prevTimestamps": Map {},
      "run": [Function],
      "startTime": 1701701914967,
    },
    WebpackBarPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "options": {
        "color": "green",
        "name": "webpack",
        "reporter": null,
        "reporters": [
          "basic",
        ],
      },
      "percentBy": undefined,
      "profile": false,
      "reporters": [
        SimpleReporter {},
      ],
      "showActiveModules": true,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    DependencyExtractionWebpackPlugin {
      "externalizedDeps": Set {},
      "externalsPlugin": ExternalsPlugin {
        "externals": [Function],
        "type": "window",
      },
      "options": {
        "combineAssets": false,
        "combinedOutputFile": null,
        "externalizedReport": false,
        "injectPolyfill": false,
        "outputFilename": null,
        "outputFormat": "php",
        "requestToHandle": [Function],
        "useDefaults": true,
      },
    },
    CleanExtractedDeps {
      "options": undefined,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "verbose": false,
      },
      "outputPath": "",
      "trash": [],
      "verbose": false,
    },
    TenUpToolkitTscPlugin {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js includes webpack-bundle-analyzer when using --analyze 1`] = `
{
  "devServer": undefined,
  "devtool": false,
  "entry": [Function],
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "jquery": "jQuery",
    "lodash": "lodash",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": [Function],
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/babel-loader/lib/index.js",
            "options": {
              "cacheDirectory": true,
            },
          },
          {
            "loader": "@linaria/webpack-loader",
            "options": {
              "babelOptions": {},
              "extension": ".linaria.module.css",
              "overrideContext": [Function],
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": false,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": false,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.linaria\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": false,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "css-loader",
          },
        ],
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "parse": {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.\\(jpe\\?g\\|png\\|webp\\|avif\\)\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.svg\\$/,
        },
      },
    ],
    "runtimeChunk": false,
  },
  "output": {
    "chunkFilename": "js/[name].[contenthash].chunk.js",
    "clean": true,
    "filename": [Function],
    "path": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 102400,
    "maxEntrypointSize": 409600,
  },
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "emitError": true,
        "emitWarning": true,
        "extensions": "js",
        "failOnError": false,
        "fix": false,
        "lintDirtyModulesOnly": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[id].css",
        "experimentalUseImportModule": undefined,
        "filename": [Function],
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    CopyPlugin {
      "options": {},
      "patterns": [
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
          "from": "**/*.{jpg,jpeg,png,gif,webp,avif,ico,svg,eot,ttf,woff,woff2,otf}",
          "noErrorOnMissing": true,
          "to": "[path][name][ext]",
        },
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks",
          "from": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks/**/block.json",
          "noErrorOnMissing": true,
          "to": "blocks/[path][name][ext]",
          "transform": [Function],
        },
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks",
          "from": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks/**/*.php",
          "noErrorOnMissing": true,
          "to": "blocks/[path][name][ext]",
        },
      ],
    },
    StylelintWebpackPlugin {
      "key": "StylelintWebpackPlugin",
      "options": {
        "allowEmptyInput": true,
        "cache": true,
        "cacheLocation": "node_modules/.cache/stylelint-webpack-plugin/.stylelintcache",
        "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "css",
          "scss",
          "sass",
        ],
        "failOnError": false,
        "files": "**/*.(s(c|a)ss|css)",
        "lintDirtyModulesOnly": true,
      },
      "prevTimestamps": Map {},
      "run": [Function],
      "startTime": 1701701915192,
    },
    WebpackBarPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "options": {
        "color": "green",
        "name": "webpack",
        "reporter": null,
        "reporters": [
          "basic",
        ],
      },
      "percentBy": undefined,
      "profile": false,
      "reporters": [
        SimpleReporter {},
      ],
      "showActiveModules": true,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    DependencyExtractionWebpackPlugin {
      "externalizedDeps": Set {},
      "externalsPlugin": ExternalsPlugin {
        "externals": [Function],
        "type": "window",
      },
      "options": {
        "combineAssets": false,
        "combinedOutputFile": null,
        "externalizedReport": false,
        "injectPolyfill": false,
        "outputFilename": null,
        "outputFormat": "php",
        "requestToHandle": [Function],
        "useDefaults": true,
      },
    },
    CleanExtractedDeps {
      "options": undefined,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "verbose": false,
      },
      "outputPath": "",
      "trash": [],
      "verbose": false,
    },
    TenUpToolkitTscPlugin {},
    BundleAnalyzerPlugin {
      "logger": Logger {
        "activeLevels": Set {
          "info",
          "warn",
          "error",
          "silent",
        },
      },
      "opts": {
        "analyzerHost": "127.0.0.1",
        "analyzerMode": "static",
        "analyzerPort": 8888,
        "analyzerUrl": [Function],
        "defaultSizes": "parsed",
        "excludeAssets": null,
        "generateStatsFile": false,
        "logLevel": "info",
        "openAnalyzer": true,
        "reportFilename": null,
        "reportTitle": [Function],
        "startAnalyzer": true,
        "statsFilename": "stats.json",
        "statsOptions": null,
      },
      "server": null,
    },
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js includes webpack-bundle-analyzer when using --analyze 2`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": [Function],
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "jquery": "jQuery",
    "lodash": "lodash",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": [Function],
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/babel-loader/lib/index.js",
            "options": {
              "cacheDirectory": true,
            },
          },
          {
            "loader": "@linaria/webpack-loader",
            "options": {
              "babelOptions": {},
              "extension": ".linaria.module.css",
              "overrideContext": [Function],
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.linaria\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "css-loader",
          },
        ],
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "parse": {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.\\(jpe\\?g\\|png\\|webp\\|avif\\)\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.svg\\$/,
        },
      },
    ],
    "runtimeChunk": false,
  },
  "output": {
    "chunkFilename": "js/[name].[contenthash].chunk.js",
    "clean": true,
    "filename": [Function],
    "path": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "emitError": true,
        "emitWarning": true,
        "extensions": "js",
        "failOnError": false,
        "fix": false,
        "lintDirtyModulesOnly": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[id].css",
        "experimentalUseImportModule": undefined,
        "filename": [Function],
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    CopyPlugin {
      "options": {},
      "patterns": [
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
          "from": "**/*.{jpg,jpeg,png,gif,webp,avif,ico,svg,eot,ttf,woff,woff2,otf}",
          "noErrorOnMissing": true,
          "to": "[path][name][ext]",
        },
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks",
          "from": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks/**/block.json",
          "noErrorOnMissing": true,
          "to": "blocks/[path][name][ext]",
          "transform": [Function],
        },
        {
          "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks",
          "from": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/includes/blocks/**/*.php",
          "noErrorOnMissing": true,
          "to": "blocks/[path][name][ext]",
        },
      ],
    },
    StylelintWebpackPlugin {
      "key": "StylelintWebpackPlugin",
      "options": {
        "allowEmptyInput": true,
        "cache": true,
        "cacheLocation": "node_modules/.cache/stylelint-webpack-plugin/.stylelintcache",
        "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "css",
          "scss",
          "sass",
        ],
        "failOnError": false,
        "files": "**/*.(s(c|a)ss|css)",
        "lintDirtyModulesOnly": true,
      },
      "prevTimestamps": Map {},
      "run": [Function],
      "startTime": 1701701915403,
    },
    WebpackBarPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "options": {
        "color": "green",
        "name": "webpack",
        "reporter": null,
        "reporters": [
          "basic",
        ],
      },
      "percentBy": undefined,
      "profile": false,
      "reporters": [
        SimpleReporter {},
      ],
      "showActiveModules": true,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    DependencyExtractionWebpackPlugin {
      "externalizedDeps": Set {},
      "externalsPlugin": ExternalsPlugin {
        "externals": [Function],
        "type": "window",
      },
      "options": {
        "combineAssets": false,
        "combinedOutputFile": null,
        "externalizedReport": false,
        "injectPolyfill": false,
        "outputFilename": null,
        "outputFormat": "php",
        "requestToHandle": [Function],
        "useDefaults": true,
      },
    },
    CleanExtractedDeps {
      "options": undefined,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "verbose": false,
      },
      "outputPath": "",
      "trash": [],
      "verbose": false,
    },
    TenUpToolkitTscPlugin {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js returns proper configs for package config with commonjs2 format 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": [Function],
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": [Function],
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": false,
                    "wordpress": true,
                  },
                ],
                [
                  "@linaria",
                  {
                    "babelOptions": {
                      "babelrc": false,
                      "configFile": false,
                      "presets": [
                        [
                          "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                          {
                            "targets": [
                              "> 1%",
                              "Firefox ESR",
                              "last 2 versions",
                              "not ie <= 11",
                              "not ie_mob <=11",
                            ],
                            "useBuiltIns": false,
                            "wordpress": true,
                          },
                        ],
                      ],
                      "sourceType": "unambiguous",
                    },
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
          {
            "loader": "@linaria/webpack-loader",
            "options": {
              "babelOptions": {
                "babelrc": false,
                "configFile": false,
                "plugins": [],
                "presets": [
                  [
                    "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                    {
                      "targets": [
                        "> 1%",
                        "Firefox ESR",
                        "last 2 versions",
                        "not ie <= 11",
                        "not ie_mob <=11",
                      ],
                      "useBuiltIns": false,
                      "wordpress": true,
                    },
                  ],
                  [
                    "@linaria",
                    {
                      "babelOptions": {
                        "babelrc": false,
                        "configFile": false,
                        "presets": [
                          [
                            "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                            {
                              "targets": [
                                "> 1%",
                                "Firefox ESR",
                                "last 2 versions",
                                "not ie <= 11",
                                "not ie_mob <=11",
                              ],
                              "useBuiltIns": false,
                              "wordpress": true,
                            },
                          ],
                        ],
                        "sourceType": "unambiguous",
                      },
                    },
                  ],
                ],
                "sourceType": "unambiguous",
              },
              "extension": ".linaria.module.css",
              "overrideContext": [Function],
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.linaria\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "css-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "parse": {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.\\(jpe\\?g\\|png\\|webp\\|avif\\)\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.svg\\$/,
        },
      },
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "emitError": true,
        "emitWarning": true,
        "extensions": "js",
        "failOnError": false,
        "fix": false,
        "lintDirtyModulesOnly": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[id].css",
        "experimentalUseImportModule": undefined,
        "filename": [Function],
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    StylelintWebpackPlugin {
      "key": "StylelintWebpackPlugin",
      "options": {
        "allowEmptyInput": true,
        "cache": true,
        "cacheLocation": "node_modules/.cache/stylelint-webpack-plugin/.stylelintcache",
        "configFile": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/stylelint.config.js",
        "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "css",
          "scss",
          "sass",
        ],
        "failOnError": false,
        "files": "**/*.(s(c|a)ss|css)",
        "lintDirtyModulesOnly": true,
      },
      "prevTimestamps": Map {},
      "run": [Function],
      "startTime": 1701701914484,
    },
    WebpackBarPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "options": {
        "color": "green",
        "name": "webpack",
        "reporter": null,
        "reporters": [
          "basic",
        ],
      },
      "percentBy": undefined,
      "profile": false,
      "reporters": [
        SimpleReporter {},
      ],
      "showActiveModules": true,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    CleanExtractedDeps {
      "options": undefined,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "verbose": false,
      },
      "outputPath": "",
      "trash": [],
      "verbose": false,
    },
    TenUpToolkitTscPlugin {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js takes the --target option into account 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": [Function],
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": [Function],
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": false,
                    "wordpress": true,
                  },
                ],
                [
                  "@linaria",
                  {
                    "babelOptions": {
                      "babelrc": false,
                      "configFile": false,
                      "presets": [
                        [
                          "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                          {
                            "targets": [
                              "> 1%",
                              "Firefox ESR",
                              "last 2 versions",
                              "not ie <= 11",
                              "not ie_mob <=11",
                            ],
                            "useBuiltIns": false,
                            "wordpress": true,
                          },
                        ],
                      ],
                      "sourceType": "unambiguous",
                    },
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
          {
            "loader": "@linaria/webpack-loader",
            "options": {
              "babelOptions": {
                "babelrc": false,
                "configFile": false,
                "plugins": [],
                "presets": [
                  [
                    "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                    {
                      "targets": [
                        "> 1%",
                        "Firefox ESR",
                        "last 2 versions",
                        "not ie <= 11",
                        "not ie_mob <=11",
                      ],
                      "useBuiltIns": false,
                      "wordpress": true,
                    },
                  ],
                  [
                    "@linaria",
                    {
                      "babelOptions": {
                        "babelrc": false,
                        "configFile": false,
                        "presets": [
                          [
                            "/Users/nicholasio/projects/10up-toolkit/packages/babel-preset-default/index.js",
                            {
                              "targets": [
                                "> 1%",
                                "Firefox ESR",
                                "last 2 versions",
                                "not ie <= 11",
                                "not ie_mob <=11",
                              ],
                              "useBuiltIns": false,
                              "wordpress": true,
                            },
                          ],
                        ],
                        "sourceType": "unambiguous",
                      },
                    },
                  ],
                ],
                "sourceType": "unambiguous",
              },
              "extension": ".linaria.module.css",
              "overrideContext": [Function],
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
          /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.linaria\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.linaria\\\\\\.module\\\\\\.css/,
        "use": [
          {
            "loader": "/Users/nicholasio/projects/10up-toolkit/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "css-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "parse": {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.\\(jpe\\?g\\|png\\|webp\\|avif\\)\\$/i,
        },
      },
      ImageMinimizerPlugin {
        "options": {
          "concurrency": undefined,
          "deleteOriginalAssets": true,
          "exclude": undefined,
          "generator": undefined,
          "include": undefined,
          "loader": true,
          "minimizer": {
            "implementation": [Function],
          },
          "severityError": undefined,
          "test": /\\\\\\.svg\\$/,
        },
      },
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "emitError": true,
        "emitWarning": true,
        "extensions": "js",
        "failOnError": false,
        "fix": false,
        "lintDirtyModulesOnly": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[id].css",
        "experimentalUseImportModule": undefined,
        "filename": [Function],
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    StylelintWebpackPlugin {
      "key": "StylelintWebpackPlugin",
      "options": {
        "allowEmptyInput": true,
        "cache": true,
        "cacheLocation": "node_modules/.cache/stylelint-webpack-plugin/.stylelintcache",
        "configFile": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/config/stylelint.config.js",
        "context": "/Users/nicholasio/projects/10up-toolkit/packages/toolkit/assets",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "css",
          "scss",
          "sass",
        ],
        "failOnError": false,
        "files": "**/*.(s(c|a)ss|css)",
        "lintDirtyModulesOnly": true,
      },
      "prevTimestamps": Map {},
      "run": [Function],
      "startTime": 1701701915615,
    },
    WebpackBarPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "options": {
        "color": "green",
        "name": "webpack",
        "reporter": null,
        "reporters": [
          "basic",
        ],
      },
      "percentBy": undefined,
      "profile": false,
      "reporters": [
        SimpleReporter {},
      ],
      "showActiveModules": true,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    CleanExtractedDeps {
      "options": undefined,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "verbose": false,
      },
      "outputPath": "",
      "trash": [],
      "verbose": false,
    },
    TenUpToolkitTscPlugin {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "node",
}
`;
